adds autocomplete to sportsbook textfield in main and calculator. will prolly add autocompletion to tags textfield, but want the tags to complete each word typed. and unsure how to do that currently

--- a/src/main/resources/com/kyle/clientTracker/main.fxml
+++ b/src/main/resources/com/kyle/clientTracker/main.fxml
@@ -22,6 +22,9 @@
       <children>
          <TextField fx:id="searchTextField" focusTraversable="false" onKeyTyped="#searchTextFieldTyped" promptText="Type to search" />
       </children>
+      <VBox.margin>
+         <Insets bottom="10.0" />
+      </VBox.margin>
    </HBox>
    <HBox prefHeight="101.0" prefWidth="1373.0" style="-fx-alignment: center;">
       <children>
