--- a/src/main/resources/com/kyle/clientTracker/calculator.fxml
+++ b/src/main/resources/com/kyle/clientTracker/calculator.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: #222222;" stylesheets="@calculator.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kyle.clientTracker.controller.CalculatorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: #222222;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kyle.clientTracker.controller.CalculatorController">
    <children>
       <GridPane layoutX="12.0" layoutY="14.0" prefHeight="400.0" prefWidth="577.0">
         <columnConstraints>
